--- a/pages/Oso Kodiak.html
+++ b/pages/Oso Kodiak.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página de Inicio - Osos</title>
+  <title>Oso Pardo</title>
   
   <!-- Enlace a Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark text-white">
-      <a class="navbar-brand" href="./index.html">Sitio de Osos</a>
+      <a class="navbar-brand" href="../index.html">Sitio de Osos</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -27,16 +27,16 @@
             <a class="nav-link" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/Oso Kodiak.html">Oso Pardo</a>
+            <a class="nav-link" href="./Oso Kodiak.html">Oso Pardo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/Oso Polar.html">Oso Polar</a>
+            <a class="nav-link" href="./Oso Polar.html">Oso Polar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/Oso Panda.html">Oso Panda</a>
+            <a class="nav-link" href="./Oso Panda.html">Oso Panda</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/Oso de Anteojos.html">Oso de Anteojos</a>
+            <a class="nav-link" href="./Oso de Anteojos.html">Oso de Anteojos</a>
           </li>
         </ul>
       </div>
@@ -44,10 +44,10 @@
   </header>
   
   <main class="container text-center">
-    <h1>Bienvenido al Mundo de los Osos</h1>
-    <p>Explora las diferentes variedades de osos en nuestro sitio web.</p>
+    <h1>El Oso Pardo</h1>
+    <p>El oso pardo (Ursus arctos) es un mamífero grande que habita en América del Norte, Europa y Asia. Caracterizado por su pelaje variable en tonos de marrón, puede alcanzar hasta 600 kg en los machos. Su dieta es diversa, incluyendo frutas, vegetación y animales pequeños, y posee un olfato agudo. Experimenta ciclos de hibernación en invierno, ralentizando su metabolismo y viviendo de sus reservas de grasa. Aunque suele ser solitario, puede congregarse en áreas con alimento. Su presencia es importante para los ecosistemas y su simbolismo cultural denota poder y respeto.</p>
     <div class="image-frame">
-      <img src="./assets/img/VariosOsos.jpg" alt="Oso" class="img-fluid">
+      <img src="../assets/img/OsoPardo.jpg" alt="Oso" class="img-fluid">
     </div>
   </main>
   
