--- a/pages/Oso Panda.html
+++ b/pages/Oso Panda.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página de Inicio - Osos</title>
+  <title>Oso Panda</title>
   
   <!-- Enlace a Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark text-white">
-      <a class="navbar-brand" href="./index.html">Sitio de Osos</a>
+      <a class="navbar-brand" href="../index.html">Sitio de Osos</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -27,16 +27,16 @@
             <a class="nav-link" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/Oso Kodiak.html">Oso Pardo</a>
+            <a class="nav-link" href="./Oso Kodiak.html">Oso Pardo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/Oso Polar.html">Oso Polar</a>
+            <a class="nav-link" href="./Oso Polar.html">Oso Polar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/Oso Panda.html">Oso Panda</a>
+            <a class="nav-link" href="./Oso Panda.html">Oso Panda</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/Oso de Anteojos.html">Oso de Anteojos</a>
+            <a class="nav-link" href="Oso de Anteojos.html">Oso de Anteojos</a>
           </li>
         </ul>
       </div>
@@ -44,10 +44,10 @@
   </header>
   
   <main class="container text-center">
-    <h1>Bienvenido al Mundo de los Osos</h1>
-    <p>Explora las diferentes variedades de osos en nuestro sitio web.</p>
+    <h1>El Oso Panda</h1>
+    <p>El oso panda gigante (Ailuropoda melanoleuca) es una especie distintiva y emblemática nativa de las montañas de China. Caracterizado por su pelaje blanco y negro, es un símbolo de la conservación de la vida silvestre. Su dieta se basa principalmente en bambú, aunque ocasionalmente consume pequeños animales. Aunque son solitarios por naturaleza, su apariencia tierna y su comportamiento tranquilo han cautivado la atención del mundo. Sin embargo, su hábitat está amenazado por la pérdida de bosques de bambú y su conservación es esencial para preservar esta especie única.</p>
     <div class="image-frame">
-      <img src="./assets/img/VariosOsos.jpg" alt="Oso" class="img-fluid">
+      <img src="../assets/img/OsoPanda.jpg" alt="Oso" class="img-fluid">
     </div>
   </main>
   
