--- a/pages/Oso Polar.html
+++ b/pages/Oso Polar.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página de Inicio - Osos</title>
+  <title>Oso Polar</title>
   
   <!-- Enlace a Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark text-white">
-      <a class="navbar-brand" href="./index.html">Sitio de Osos</a>
+      <a class="navbar-brand" href="../index.html">Sitio de Osos</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -27,16 +27,16 @@
             <a class="nav-link" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/Oso Kodiak.html">Oso Pardo</a>
+            <a class="nav-link" href="./Oso Kodiak.html">Oso Pardo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/Oso Polar.html">Oso Polar</a>
+            <a class="nav-link" href="./Oso Polar.html">Oso Polar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/Oso Panda.html">Oso Panda</a>
+            <a class="nav-link" href="./Oso Panda.html">Oso Panda</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/Oso de Anteojos.html">Oso de Anteojos</a>
+            <a class="nav-link" href="./Oso de Anteojos.html">Oso de Anteojos</a>
           </li>
         </ul>
       </div>
@@ -44,10 +44,10 @@
   </header>
   
   <main class="container text-center">
-    <h1>Bienvenido al Mundo de los Osos</h1>
-    <p>Explora las diferentes variedades de osos en nuestro sitio web.</p>
+    <h1>El Oso Polar</h1>
+    <p>El oso polar (Ursus maritimus) es una especie icónica adaptada a la vida en el Ártico. Con su característico pelaje blanco y gruesa capa de grasa, se adapta al frío extremo. Es un depredador marino, mayormente alimentándose de focas, y su habilidad para nadar largas distancias y sumergirse en busca de presas es esencial para su supervivencia. Los osos polares son expertos cazadores en el hielo, utilizando su agudo sentido del olfato para detectar las focas debajo de las capas de hielo. A medida que el hielo marino se reduce debido al cambio climático, el oso polar enfrenta desafíos crecientes en su hábitat y su futuro se ha convertido en un foco de preocupación en la conservación.</p>
     <div class="image-frame">
-      <img src="./assets/img/VariosOsos.jpg" alt="Oso" class="img-fluid">
+      <img src="../assets/img/OsoPolar.jpg" alt="Oso" class="img-fluid">
     </div>
   </main>
   
