--- a/pages/Oso de Anteojos.html
+++ b/pages/Oso de Anteojos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página de Inicio - Osos</title>
+  <title>Oso Panda</title>
   
   <!-- Enlace a Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark text-white">
-      <a class="navbar-brand" href="./index.html">Sitio de Osos</a>
+      <a class="navbar-brand" href="../index.html">Sitio de Osos</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -27,16 +27,16 @@
             <a class="nav-link" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/Oso Kodiak.html">Oso Pardo</a>
+            <a class="nav-link" href="./Oso Kodiak.html">Oso Pardo</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/Oso Polar.html">Oso Polar</a>
+            <a class="nav-link" href="./Oso Polar.html">Oso Polar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/Oso Panda.html">Oso Panda</a>
+            <a class="nav-link" href="./Oso Panda.html">Oso Panda</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./pages/Oso de Anteojos.html">Oso de Anteojos</a>
+            <a class="nav-link" href="./Oso de Anteojos.html">Oso de Antejoso</a>
           </li>
         </ul>
       </div>
@@ -44,10 +44,10 @@
   </header>
   
   <main class="container text-center">
-    <h1>Bienvenido al Mundo de los Osos</h1>
-    <p>Explora las diferentes variedades de osos en nuestro sitio web.</p>
+    <h1>El Oso de Anteojos</h1>
+    <p>El oso de anteojos (Tremarctos ornatus), también conocido como oso andino, es una especie nativa de América del Sur y se encuentra en regiones montañosas de países como Colombia, Ecuador, Perú y Bolivia. Su característica distintiva son los anillos blancos alrededor de sus ojos, de ahí su nombre. A pesar de ser carnívoro, su dieta es variada y se compone principalmente de frutas, bromelias y pequeños animales. Su adaptación a ambientes montañosos y su agilidad en los árboles son notables, y su papel en la dispersión de semillas es crucial para la salud de los ecosistemas en los que vive. Aunque enfrenta amenazas por la pérdida de hábitat y la caza, es un importante ícono de conservación en la región andina.</p>
     <div class="image-frame">
-      <img src="./assets/img/VariosOsos.jpg" alt="Oso" class="img-fluid">
+      <img src="../assets/img/OsoDeAnteojos.webp" alt="Oso" class="img-fluid">
     </div>
   </main>
   
@@ -75,3 +75,4 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
+                       
